# nexora

./: .gitignore
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: files.py  health.py  jobs.py  media.py  websockets.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/models/: __init__.py  job.py  media.py  requests.py  response.py  system.py
backend/app/services/: cleanup_service.py  download_file_service.py  download_process_manager.py  job_manager.py  media_service.py  quality_selector.py  websocket_manager.py
backend/app/utils/: platforms.py  storage.py  validators.py
backend/storage/temp/: d7c626f1-13eb-4c59-96be-22ce315c76b0.m4a
backend/tests/: test_cleanup_service.py  test_config.py  test_download_cancellation.py  test_file_serving.py  test_media_download.py  test_media_quality_api.py  test_quality_selector.py  test_websocket_progress.py
docs/: CODING_RULES.md  IMPLEMENTATION_ROADMAP.md  PROJECT_CONTEXT.md  PROJECT_STRUCTURE.md
docs/ui/stitch/: nexora_ux_design_flow.md
mobile/: .gitignore  pubspec.yaml
mobile/lib/: main.dart
mobile/lib/models/: completed_file_download.dart  download_history_item.dart  download_job.dart  download_job.freezed.dart  download_job.g.dart  health_check_result.dart  job_update.dart  media_download_type.dart  media_metadata.dart  media_metadata.freezed.dart  media_metadata.g.dart  media_state.dart  media_state.freezed.dart
mobile/test/: widget_test.dart
(+36 files in other folders)
