[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexora-backend"
version = "0.1.0"
description = "Nexora FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.5,<3.0",
  "yt-dlp>=2025.1.15,<2027.0.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
